--- a/server.properties
+++ b/server.properties
@@ -1,37 +1,39 @@
 #Minecraft server properties
-#Thu Jun 21 19:25:42 JST 2018
-generator-settings=
-op-permission-level=4
-allow-nether=true
-level-name=world
-enable-query=false
-allow-flight=true
-prevent-proxy-connections=false
-server-port=27889
-max-world-size=64000
-level-type=DEFAULT
-enable-rcon=false
-force-gamemode=false
-level-seed=
-server-ip=
-network-compression-threshold=256
-max-build-height=256
-spawn-npcs=true
-white-list=true
-spawn-animals=true
-hardcore=false
-snooper-enabled=true
-resource-pack-sha1=
-online-mode=true
-resource-pack=
-pvp=true
-difficulty=3
-enable-command-block=false
-gamemode=0
-player-idle-timeout=0
-max-players=10
+#Fri Jun 22 22:10:52 JST 2018
 max-tick-time=0
+generator-settings=
+force-gamemode=false
+allow-nether=true
+enforce-whitelist=false
+gamemode=0
+broadcast-console-to-ops=true
+enable-query=false
+player-idle-timeout=0
+difficulty=3
 spawn-monsters=true
+op-permission-level=4
+pvp=true
+snooper-enabled=true
+level-type=DEFAULT
+hardcore=false
+enable-command-block=false
+max-players=10
+network-compression-threshold=256
+resource-pack-sha1=
+max-world-size=64000
+server-port=27889
+server-ip=
+spawn-npcs=true
+allow-flight=true
+level-name=world
 view-distance=16
+resource-pack=
+spawn-animals=true
+white-list=true
 generate-structures=true
+online-mode=true
+max-build-height=256
+level-seed=
+prevent-proxy-connections=false
+enable-rcon=false
 motd=oNesso Land
